# verify-oidc-identity

./: .editorconfig  .flake8  .pre-commit-config.yaml  .release-it.json  CHANGELOG.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/actions/install-deps/: action.yml
.github/actions/pre-commit/: action.yml
.github/actions/release-bumper/: action.yml
.github/workflows/: main.yml  tests.yml
docs/: changelog.md  index.md  license.md
docs/reference/: exceptions.md  index.md  transport.md  verifiers.md
examples/: verify-google-id-token.py
federatedidentity/: __init__.py  _oidc.py  _verify.py  baseprovider.py  exceptions.py  oidc.py  verifiers.py
federatedidentity/transport/: __init__.py  requests.py
tests/: conftest.py  josefixtures.py  oidcfixtures.py  test_jose.py  test_jwks_fetching.py  test_oidc.py  test_oidc_discovery.py  test_validation.py  test_verification.py  test_verifiers.py
